Add some fields to Entities and redesign Block1
Add some fields to Entities and redesign Block1

--- a/SBL-CRM/SBL-CRM.csproj
+++ b/SBL-CRM/SBL-CRM.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Lib\Entities\SyncQueue\SyncQueueManager.cs" />
     <Compile Include="Lib\Entities\SyncQueue\SyncQueueRepository.cs" />
     <Compile Include="Lib\Fragments\Block1Fragment.cs" />
+    <Compile Include="Lib\Fragments\Block2Fragment.cs" />
+    <Compile Include="Lib\Fragments\DrugInfoFragment.cs" />
+    <Compile Include="Lib\Fragments\PhotoAddFragment.cs" />
+    <Compile Include="Lib\Fragments\PhotoListFragment.cs" />
+    <Compile Include="Lib\Entities\PhotoType.cs" />
+    <Compile Include="Lib\Entities\PhotoSubType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -117,6 +123,10 @@
     <AndroidResource Include="Resources\drawable\ic_fast_rewind_white_36dp.png" />
     <AndroidResource Include="Resources\drawable\ic_fast_forward_black_36dp.png" />
     <AndroidResource Include="Resources\drawable\ic_fast_rewind_black_36dp.png" />
+    <AndroidResource Include="Resources\layout\Block2Fragment.axml" />
+    <AndroidResource Include="Resources\layout\PhotoAddFragment.axml" />
+    <AndroidResource Include="Resources\layout\DrugInfoFragment.axml" />
+    <AndroidResource Include="Resources\layout\PhotoListFragment.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
