--- a/SBL-CRM/Properties/AndroidManifest.xml
+++ b/SBL-CRM/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ru.sbl-pharma.sbl-crm">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.1" package="ru.sbl-pharma.sbl-crm" android:versionCode="2">
 	<uses-sdk android:minSdkVersion="10" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
