--- a/SBL-CRM/SBL-CRM.csproj
+++ b/SBL-CRM/SBL-CRM.csproj
@@ -97,6 +97,7 @@
     <Compile Include="SyncActivity.cs" />
     <Compile Include="Lib\Entities\Promo.cs" />
     <Compile Include="Lib\Entities\NetCategory.cs" />
+    <Compile Include="Lib\Entities\TradeNet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -140,6 +141,8 @@
     <AndroidResource Include="Resources\layout\SyncFragmentItem.axml" />
     <AndroidResource Include="Resources\drawable\ic_check_circle_white_48dp.png" />
     <AndroidResource Include="Resources\drawable\ic_highlight_off_white_48dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_check_circle_white_36dp.png" />
+    <AndroidResource Include="Resources\drawable\ic_highlight_off_white_36dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
