--- a/SBL-CRM/Properties/AndroidManifest.xml
+++ b/SBL-CRM/Properties/AndroidManifest.xml
@@ -3,5 +3,6 @@
 	<uses-sdk android:minSdkVersion="10" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name"></application>
 </manifest>
