--- a/SBL-CRM/Properties/AndroidManifest.xml
+++ b/SBL-CRM/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.2" package="ru.sbl-pharma.sbl-crm" android:versionCode="3">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.3" package="ru.sbl-pharma.sbl-crm" android:versionCode="4">
 	<uses-sdk android:minSdkVersion="10" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name"></application>
+	<application android:allowBackup="true" android:icon="@mipmap/s5_logo_v2" android:label="@string/app_name"></application>
 </manifest>
